moved stuff around. simplified some stuff, maybe.