@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>
+        jar
+    </packaging>
+
     <repositories>
         <repository>
             <id>maven.davidpineiro.release</id>
@@ -15,6 +19,20 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <site>
+            <id>maven.davidpineiro.site</id>
+            <url>s3://davidpineiro-maven/site</url>
+        </site>
+        <repository>
+            <id>maven.davidpineiro.release</id>
+            <url>s3://davidpineiro-maven/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven.davidpineiro.snapshot</id>
+            <url>s3://davidpineiro-maven/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <parent>
         <groupId>xyz.davidpineiro</groupId>
@@ -37,6 +55,14 @@
             <version>1.3.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-statistics-distribution</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -55,11 +81,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>20</source>
+                    <target>20</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
+
+
+
     </build>
 
 </project>
